// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InstructorStudentRecordsPageComponent > should snap when student results are still loading 1`] = `
<tm-instructor-student-records-page
  commentService={[Function _InstructorCommentService]}
  commentsToCommentTableModel={[Function _CommentsToCommentTableModelPipe]}
  courseId={[Function String]}
  currInstructorName="undefined"
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasStudentResultsLoadingFailed="false"
  instructorCommentTableModel={[Function Object]}
  instructorService={[Function _InstructorService]}
  isStudentResultsLoading={[Function Boolean]}
  route={[Function Object]}
  sessionTabs={[Function Array]}
  statusMessageService={[Function _StatusMessageService]}
  studentEmail=""
  studentId={[Function String]}
  studentName={[Function String]}
  studentService={[Function _StudentService]}
  studentTeam=""
  tableComparatorService={[Function _TableComparatorService]}
>
  <h1
    id="records-header"
  >
     John Doe's Records
    <small
      class="text-muted text-break"
    >
       - CS1111
    </small>
  </h1><h2>
    Records in feedback sessions
  </h2><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-student-records-page>
`;

exports[`InstructorStudentRecordsPageComponent > should snap with default fields 1`] = `
<tm-instructor-student-records-page
  commentService={[Function _InstructorCommentService]}
  commentsToCommentTableModel={[Function _CommentsToCommentTableModelPipe]}
  courseId={[Function String]}
  currInstructorName="undefined"
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasStudentResultsLoadingFailed="false"
  instructorCommentTableModel={[Function Object]}
  instructorService={[Function _InstructorService]}
  isStudentResultsLoading={[Function Boolean]}
  route={[Function Object]}
  sessionTabs={[Function Array]}
  statusMessageService={[Function _StatusMessageService]}
  studentEmail=""
  studentId={[Function String]}
  studentName=""
  studentService={[Function _StudentService]}
  studentTeam=""
  tableComparatorService={[Function _TableComparatorService]}
>
  <h1
    id="records-header"
  >
     's Records
    <small
      class="text-muted text-break"
    >
       - su1337
    </small>
  </h1><h2>
    Records in feedback sessions
  </h2><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-student-records-page>
`;

exports[`InstructorStudentRecordsPageComponent > should snap with populated fields 1`] = `
<tm-instructor-student-records-page
  commentService={[Function _InstructorCommentService]}
  commentsToCommentTableModel={[Function _CommentsToCommentTableModelPipe]}
  courseId={[Function String]}
  currInstructorName="undefined"
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasStudentResultsLoadingFailed="false"
  instructorCommentTableModel={[Function Object]}
  instructorService={[Function _InstructorService]}
  isStudentResultsLoading="false"
  route={[Function Object]}
  sessionTabs={[Function Array]}
  statusMessageService={[Function _StatusMessageService]}
  studentEmail=""
  studentId={[Function String]}
  studentName={[Function String]}
  studentService={[Function _StudentService]}
  studentTeam=""
  tableComparatorService={[Function _TableComparatorService]}
>
  <h1
    id="records-header"
  >
     Not John Doe's Records
    <small
      class="text-muted text-break"
    >
       - su1337
    </small>
  </h1><h2>
    Records in feedback sessions
  </h2><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
    </div>
  </tm-loading-retry>
</tm-instructor-student-records-page>
`;
